[package]
name = "webhook"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
dotenv = "0.15.0"
hex = "0.4.3"
hmac = "0.12.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
sha2 = "0.10.9"
sqlx = {version = "0.8.6", features = [ "sqlite", "runtime-tokio", "tls-native-tls" ]}
tokio = {version = "1.45.1", features = ["full"]}
tower = { version = "0.5.2", features = ["util", "timeout"] }
tower-http = {version = "0.6.6", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
